--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div class="video_bg">
-        <video src="/images/video_5.mp4" autoplay muted loop></video>
+        <video src="./images/video_5.mp4" autoplay muted loop></video>
       </div>
       <div class="nav_box">
         <nav class="nav">
@@ -74,7 +74,7 @@
             </div>
             <div class="col2">
               <div class="img_wrapper">
-                <img src="/images/img_3.svg" alt="img" />
+                <img src="./images/img_3.svg" alt="img" />
               </div>
             </div>
           </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="col2">
               <div class="img_wrapper">
-                <img src="/images/img_1.svg" alt="" />
+                <img src="./images/img_1.svg" alt="" />
               </div>
             </div>
           </div>
