--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
           >
           <div class="ratings-container">
             <div class="rating">
-              <img src="/images/smiling.svg" alt="Satisfied" />
+              <img src="images/smiling.svg" alt="Satisfied" />
               <small>Satisfied</small>
             </div>
             <div class="rating">
-              <img src="/images/neutral.svg" alt="Neutral" />
+              <img src="images/neutral.svg" alt="Neutral" />
               <small>Neutral</small>
             </div>
             <div class="rating">
-              <img src="/images/sad.svg" alt="Unhappy" />
+              <img src="images/sad.svg" alt="Unhappy" />
               <small>Unhappy</small>
             </div>
           </div>
