--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           >
           <div class="ratings-container">
             <div class="rating">
-              <img src="./images/" alt="Satisfied" />
+              <img src="./images/smiling.svg" alt="Satisfied" />
               <small>Satisfied</small>
             </div>
             <div class="rating">
