--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class="nav_menu">
             <li class="nav_items"><a href="#pi">Information</a></li>
             <li class="nav_items"><a href="#about">About</a></li>
-            <li class="nav_items"><a href="#reviewBtn">Review</a></li>
+            <li class="nav_items"><a href="#review">Review</a></li>
           </ul>
           <button id="hamBtn" class="hamBtn">☰</button>
         </nav>
@@ -121,7 +121,7 @@
           </div>
         </div>
       </div>
-      <div class="panelBg">
+      <div class="panelBg" id="review">
         <div id="panel" class="panel_container">
           <a href="#" class="rating_link" id="ratingLink"
             >How satisfied are you with our customer support performence?</a
