--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
             <i class="fab fa-weebly"></i>
           </div>
           <ul class="nav_menu">
-            <li class="nav_items"><a href="#pi">Information</a></li>
-            <li class="nav_items"><a href="#about">About</a></li>
-            <li class="nav_items"><a href="#review">Review</a></li>
+            <li class="nav_items"><a class="nav_info" href="#pi">Info</a></li>
+            <li class="nav_items">
+              <a class="nav_about" href="#about">About</a>
+            </li>
+            <li class="nav_items">
+              <a class="nav_review" href="#review">Review</a>
+            </li>
           </ul>
           <button id="hamBtn" class="hamBtn">☰</button>
         </nav>
